add pagination to getAllPage
