# routes/api.php
@@ -21,7 +21,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::post('posts/create', [PostController::class, 'create'])->name('createPost');
 Route::get('posts/{id}', [PostController::class, 'get'])->name('getPost');
-Route::get('posts', [PostController::class, 'getAll'])->name('getAllPost');
+Route::post('posts', [PostController::class, 'getAll'])->name('getAllPost');
 Route::delete('posts/{id}', [PostController::class, 'delete'])->name('deletePost');
 Route::patch('posts/{id}', [PostController::class, 'patch'])->name('patchPost');
 Route::post('posts:search', [PostController::class, 'search'])->name('searchPost');
